# MIPS_simulator

./: LICENSE  README.md  compiler.cpp  presentation.cpp
.cache/clangd/index/: Float_Calculate.cpp.831FCEDF244B9CF8.idx  Float_Calculate.h.52C5D298EC4AFCEC.idx  Instructions.cpp.2FB76A3F85B918E8.idx  MIPS_Simulator.cpp.72BB58F2F65702AE.idx  MIPS_Simulator.h.7D36C82079DB115C.idx  compiler.cpp.BDE9FB8786A89396.idx  compiler.cpp.F15D96C4140DEE0C.idx  compiler.h.7C097FAA949AAC4B.idx  compiler.hpp.D52F7B9ED6AAC844.idx  disassembler.cpp.B1908D0DC7E4AB46.idx  disassembler.h.32491D762D3DB79D.idx  main.cpp.9E9137D7352F30D2.idx  main.cpp.F64D648965EF6518.idx
Disassembler/: CMakeLists.txt  binary_to_hex.cpp  disassembler.cpp  disassembler.h  machine.asm
IO/: in.asm  machine.asm
mips system/: Project1.sln
mips system/Project1/: Float_Calculate.cpp  Float_Calculate.h  Instructions.cpp  MIPS_Simulator.cpp  MIPS_Simulator.h  Project1.vcxproj  Project1.vcxproj.filters  type.cpp
mips system/Project1/Debug/: Project1.exe.recipe  Project1.ilk  instructions.new.obj.enc  mips_simulator.obj.enc  vc142.idb
mips system/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: .clangd  CMakeLists.txt  main.cpp
src/.cache/clangd/index/: main.cpp.F64D648965EF6518.idx
src/compile/: CMakeLists.txt  compiler.cpp  compiler.h
src/disassembler/: CMakeLists.txt  disassembler.cpp  disassembler.h
src/float/: CMakeLists.txt  Float_Calculate.cpp  Float_Calculate.h
src/simulator/: CMakeLists.txt  Instructions.cpp  MIPS_Simulator.cpp  MIPS_Simulator.h
